# hello-sdl2-android

./: .gitignore  CMakeLists.txt  LICENSE  README.md  get_dependencies.sh
android/: build.gradle  local.properties
android/SDL2/: build.gradle
android/SDL2/src/androidTest/java/pvallet/com/github/sdl2/: ExampleInstrumentedTest.java
android/SDL2/src/test/java/pvallet/com/github/sdl2/: ExampleUnitTest.java
android/app/: build.gradle
android/app/src/androidTest/java/pvallet/com/github/hello_sdl2/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pvallet/com/github/hello_sdl2/: HelloSDL2Activity.java
android/app/src/test/java/pvallet/com/github/hello_sdl2/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
ios/: trigger_cmake.sh
ios/hello_sdl2.xcodeproj/: project.pbxproj
ios/hello_sdl2.xcodeproj/project.xcworkspace/xcuserdata/charlotte.stangebyehansen.xcuserdatad/: UserInterfaceState.xcuserstate
ios/hello_sdl2.xcodeproj/xcshareddata/xcschemes/: hello_sdl2.xcscheme
ios/hello_sdl2.xcodeproj/xcuserdata/charlotte.stangebyehansen.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: main.cpp
src/hello_world/: hello_world.cpp  hello_world.h
